mobile version added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
 	<title>Transaero</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
 	<div class="main">
@@ -34,6 +35,8 @@
 				<img class="header__plane-img" src="./images/plane.png" />
 			</div>
 		</header>
+		<label class="navigation__trigger-label" for="navigation"></label>
+		<input id="navigation" type="checkbox" class="navigation__trigger" />
 		<nav class="navigation">
 			<ul class="navigation__menu">
 				<li class="navigation__menu-item">Главная</li>
@@ -42,6 +45,7 @@
 				<li class="navigation__menu-item">Документы</li>
 				<li class="navigation__menu-item">Обучение</li>
 				<li class="navigation__menu-item">Медиа</li>
+				<li class="navigation__menu-item navigation__menu-item_mobile">Личный Кабинет</li>
 			</ul>
 		</nav>
 		<main class="content">
